<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muni Up</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_lines">Search by Lines</string>
    <string name="show_stations_near">Show Stations Near Me</string>
    <string name="xml_base_command">http://webservices.nextbus.com/service/publicXMLFeed?command=</string>
    <string name="xml_agency_sfmuni">sf-muni</string>
    <string name="xml_route_list_command">routeList</string>
    <string name="xml_stops_command">routeConfig</string>
    <string name="xml_terse_command">terse</string>
    <string name="xml_routeconfig_command">routeConfig</string>
    <string name="xml_useShortTitles_command">useShortTitles=true</string>
    <string name="xml_prediction_command">predictions</string>
    <string name="xml_stopid_command">stopId</string>
    <string name="xml_route_tag_command">r</string>
    <string name="xml_agency_name_tag">a</string>
    <string name="title_activity_list_stops">Stops</string>
    <string name="title_activity_route_names">Routes</string>
    <string name="show_map">Show map</string>
    <string name="action_inbound">Show Inbound</string>
    <string name="action_outbound">Show Outbound</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_show_stations">ShowStations</string>
    <string name="train_letters_only">MJKTFLNS</string>
    <string name="title_activity_show_single_stop">ShowSingleStop</string>
    <string name="show_tabs">Show Tabs</string>
    <string name="title_activity_test_tabs">TestTabs</string>
    <string name="title_section1">Near Me</string>
    <string name="title_section2">Search Line</string>
    <string name="title_section3">Favorites</string>
    <string name="title_activity_test_scrollable_tabs">TestScrollableTabs</string>
    <string name="choose_a_line_for_heading">Select an option below and point your device in the direction you want to go.</string>
    <string name="choose_a_line_for_heading_warning">(Shows only nearby lines)</string>
    <string name="inbound_or_outbound">Inbound or Outbound?</string>
    <string name="title_activity_compass_utility">Compass Utility</string>
    <string name="title_activity_compass">Find Heading</string>

</resources>