<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_inbound"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_inbound"
        
        />
    <item
        android:id="@+id/action_outbound"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_outbound" />
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_refresh" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>