<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <TextView android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inbound_or_outbound"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"/>
    
    <TextView android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_line_for_heading"
        android:gravity="center_horizontal"
        android:textSize="18sp"/>
    
    <TextView android:id="@+id/txtHeaderWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_line_for_heading_warning"
        android:gravity="center_horizontal"
        android:textSize="14sp"/>
    
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:drawSelectorOnTop="false" >
    </ListView>
    
    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Loading Data..." />
    
</LinearLayout>